continued working lesson

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <script>
         console.log("Hello, World!")
-    </script>    
+    </script>  
+    <p>Hello World</p>  
 </body>
 </html>
