--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Title</title>
-    <style type="stylesheet" src="style.css"></style>
-    <script src="javascript.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
     <script>
