--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Title</title>
-    <script src="index.js"></script>
 </head>
 <body>
     <script>
-        
-    </script>   
+        console.log('Death to America!!!!!!');
+    </script>
 </body>
 </html>
