i wish i knew what i was doing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <script>
-        console.log('Death to America!!!!!!');
+        let number = 7;
+        function add7(number) {
+            console.log(number + 7);
+        }
+        
+        add7();
+        
     </script>
 </body>
 </html>
