--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <script>
+        let admin;
+        let name;
+        name = 'John';
+        admin = name;
+        console.log(admin);
         
     </script>
 </body>
