finally figured it out

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <script>
-        let admin;
-        let name;
-        name = 'John';
-        admin = name;
-        console.log(admin);
-        
+        let number = 322225;
+        function add7 (number) {
+            number = number +7;
+            return number;
+        }
+        console.log(add7(number));
     </script>
 </body>
 </html>
