--- a/index.html
+++ b/index.html
@@ -38,11 +38,20 @@
         //}
 
         //console.log(lastLetter(name));
-
-
-
-
         
+        let answer = parseInt(prompt("Please enter the number you would like to FizzBuzz up to: "));
+
+        for (let i = 1; i <= answer; i++) {
+            if (i % 3 === 0 && i % 5 === 0) {
+                console.log("FIZZBUZZ");
+            } else if (i % 3 === 0) {
+                console.log("FIZZ");
+            } else if (i % 5 === 0) {
+                console.log("BUZZ");
+            } else {
+                console.log(i);
+            }
+        }
 
 
 
